# embedded-fatfs

./: README.md
block-device-adapters/: Cargo.toml
block-device-adapters/src/: buf_stream.rs  stream_slice.rs
embedded-fatfs/: Cargo.toml
embedded-fatfs/src/: boot_sector.rs  dir_entry.rs  error.rs
examples/esp32c6/: Cargo.toml
examples/esp32c6/src/: main.rs
examples/rp2040/: Cargo.toml
sdspi/: Cargo.toml
sdspi/src/: lib.rs
