[package]
name = "esp32c6"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.19.0", features = ["esp32c6", "async"] }
esp-backtrace = { version = "0.13.0", features = ["esp32c6", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.10.0", features = ["esp32c6", "log"] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32c6", "integrated-timers"] }
log = { version = "0.4.20" }
embassy-time = "0.3"
embassy-executor = { version = "0.5.0",  features = ["task-arena-size-8192"] }
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.2.0", features = ["async", "defmt-03"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embedded-io-async = "0.6"

sdspi = { version = "0.1.0", path = "../../sdspi", features = ["log"] }
aligned = "0.4.2"
block-device-adapters = { version = "0.1.0", path = "../../block-device-adapters" }
embedded-fatfs = { version = "0.1.0", path = "../../embedded-fatfs", default-features = false, features = ["log"] }